# aptos-python-sdk

./: .editorconfig  .env.sample  .flake8  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  MIGRATION.md  Makefile  PR_ANALYSIS_REPORT.md  README.md  SECURITY_REVIEW.md  codecov.yml  mypy.ini  pyproject.toml
.githooks/: pre-commit
.github/actions/python-setup/: action.yaml
.github/actions/safe-chain/: action.yaml
.github/scripts/: check_v2_sync.sh
.github/workflows/: devnet-examples.yaml  examples.yaml  lints.yaml  localnet-examples.yaml  publish.yaml  testnet-examples.yaml  v2-ci.yaml  v2-publish.yaml
aptos_sdk/: __init__.py  account.py  account_address.py  account_sequence_number.py  ans.py  aptos_cli_wrapper.py  aptos_token_client.py  aptos_tokenv1_client.py  asymmetric_crypto.py  asymmetric_crypto_wrapper.py  async_client.py  authenticator.py  bcs.py  chain_id.py  cli.py  crypto_wrapper.py  ed25519.py  enums.py  errors.py  extra_test.py  fungible_asset.py  hashing.py  inscriptions_client.py  metadata.py  mnemonic.py  network.py  package_publisher.py  retry.py  secp256k1_ecdsa.py  transaction_builder.py  transaction_worker.py  transactions.py  type_tag.py
aptos_sdk/supra/: accounts.py  client.py  exceptitions.py  types.py
aptos_sdk/v2/: aptos.py  config.py  errors.py
aptos_sdk/v2/account/: account.py
aptos_sdk/v2/api/: account_api.py  faucet_api.py  fungible_asset_api.py  general_api.py  http_client.py  transaction_api.py
aptos_sdk/v2/bcs/: deserializer.py  protocols.py  serializer.py
aptos_sdk/v2/crypto/: __init__.py  authentication_key.py  ed25519.py  keys.py  mnemonic.py  secp256k1.py  single_key.py
aptos_sdk/v2/transactions/: authenticator.py  payload.py  raw_transaction.py  signed_transaction.py
aptos_sdk/v2/types/: account_address.py  type_tag.py
docs/: python-DESIGN.md
docs/api/: aptos_sdk.html  index.html  search.js
docs/api/aptos_sdk/: ans.html
examples/: __init__.py  aptos_token.py  common.py  e2e_smoke.py  fee_payer_transfer_coin.py  hello_blockchain.py  inscriptions.py  integration_test.py  large_package_publisher.py  multikey.py  multisig.py  object_code_deployment.py  orderless_txn.py  read_aggregator.py  rotate_key.py  secp256k1_ecdsa_transfer_coin.py  simple_aptos_token.py  simple_nft.py  simulate_transfer_coin.py  transaction_batching.py  transfer_coin.py  transfer_two_by_two.py  your_coin.py  your_fungible_asset.py
features/: account_address.feature  bcs_deserialization.feature  bcs_serialization.feature
features/steps/: account_address.py  bcs.py  common.py
features/stubs/behave/: __init__.pyi  _stepimport.pyi  _types.pyi  capture.pyi  configuration.pyi  fixture.pyi  i18n.pyi  importer.pyi  json_parser.pyi  log_capture.pyi  matchers.pyi  model.pyi  model_core.pyi  model_describe.pyi  parser.pyi  runner.pyi  runner_util.pyi  step_registry.pyi  tag_expression.pyi  tag_matcher.pyi  textutil.pyi  userdata.pyi
features/stubs/behave/api/: async_step.pyi
features/stubs/behave/compat/: collections.pyi
features/stubs/behave/contrib/: formatter_missing_steps.pyi  scenario_autoretry.pyi
features/stubs/behave/contrib/steps/: __init__.pyi
features/stubs/behave/formatter/: _builtins.pyi  _registry.pyi  ansi_escapes.pyi  base.pyi  formatters.pyi  json.pyi  null.pyi  plain.pyi  pretty.pyi  progress.pyi  rerun.pyi  sphinx_steps.pyi  sphinx_util.pyi  steps.pyi  tags.pyi
features/stubs/behave/reporter/: base.pyi  junit.pyi  summary.pyi
tests/: __init__.py  conftest.py  test_account.py  test_account_address.py  test_async_client.py  test_authenticator.py  test_bcs.py  test_chain_id.py  test_crypto_wrapper.py  test_ed25519.py  test_errors.py  test_hashing.py  test_mnemonic.py  test_network.py  test_retry.py  test_secp256k1.py  test_transaction_builder.py  test_transactions.py  test_type_tag.py
tests/integration/: conftest.py  test_fee_payer.py  test_node.py  test_secp256k1.py  test_simulate.py  test_transfer.py
v2/: CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
v2/examples/: batch_orderless_transfers.py  custom_coin_fungible_asset.py  different_key_types.py  fetch_on_chain_data.py  mnemonic_key_recovery.py  multi_agent_transfer.py  orderless_transfer.py  script_transaction.py  simulate_transaction.py  sponsored_transaction.py  transfer_apt.py
v2/src/aptos_sdk_v2/: __init__.py  aptos.py
v2/src/aptos_sdk_v2/account/: __init__.py  account.py
v2/src/aptos_sdk_v2/api/: __init__.py  account_api.py  coin_api.py  fungible_asset_api.py  general_api.py  http_client.py  transaction_api.py
v2/src/aptos_sdk_v2/bcs/: __init__.py  deserializer.py  protocols.py  serializer.py
v2/src/aptos_sdk_v2/crypto/: authentication_key.py  mnemonic.py  secp256k1.py
v2/src/aptos_sdk_v2/transactions/: __init__.py  authenticator.py  payload.py  raw_transaction.py  signed_transaction.py
v2/src/aptos_sdk_v2/types/: __init__.py  account_address.py  chain_id.py  type_tag.py
v2/tests/: conftest.py
v2/tests/integration/: conftest.py  test_transfer.py  test_view_function.py
v2/tests/unit/: test_account.py  test_account_address.py  test_account_api.py  test_aptos.py  test_authentication_key.py  test_authenticator.py  test_bcs.py  test_chain_id.py  test_coin_api.py  test_config.py  test_ed25519.py  test_errors.py  test_faucet_api.py  test_fungible_asset_api.py  test_general_api.py  test_http_client.py  test_mnemonic.py  test_orderless.py  test_secp256k1.py  test_single_key.py  test_transaction_api.py  test_transactions.py  test_type_tag.py
