[tool.poetry]
name = "aptos-sdk"
version = "0.11.0"
description = "Aptos SDK"
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/aptos-labs/aptos-python-sdk"
homepage = "https://aptos.dev/en/build/sdks/python-sdk"
keywords = ["web3", "sdk", "aptos", "blockchain"]

[tool.setuptools.package-data]
"aptos-sdk" = ["py.typed"]

[tool.poetry.dependencies]
ecdsa = "0.19.1"
python-graphql-client = "^0.4.3"
httpx = {extras = ["http2"], version = "^0.28.0"}
PyNaCl = "^1.5.0"
python = ">=3.9.0"
tomli = "^2.2.1"
typing-extensions = "^4.15.0"
# Security overrides for transitive dependencies
h11 = "^0.16.0"  # via httpx -> httpcore
h2 = "^4.3.0"  # via httpx[http2]

[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
behave = "^1.2.6"
black = "^24.10.0"
coverage = "^7.6.12"
flake8 = "^7.2.0"
isort = "^5.13.2"
mypy = "^1.16.0"
mypy-extensions = "^1.1.0"
types-six = "^1.17.0.20250515"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
