[project]
name = "aptos-sdk"
version = "0.11.0"
description = "Aptos SDK"
authors = [{ name = "Aptos Labs", email = "opensource@aptoslabs.com" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["web3", "sdk", "aptos", "blockchain"]

dependencies = [
    "cryptography>=46.0.5,<47",
    "python-graphql-client>=0.4.3,<0.5",
    "httpx[http2]>=0.28.0,<0.29",
    "PyNaCl>=1.6.2,<2",
    "tomli>=2.4.0,<3",
    "typing-extensions>=4.15.0,<5",
    # v2 dependencies
    # NOTE: bip-utils still pulls in coincurve transitively; it remains part of
    # the install surface until bip-utils is replaced with an alternative.
    "bip-utils>=2.9,<3",
    # Security overrides for transitive dependencies
    "h11>=0.16.0,<0.17",       # via httpx -> httpcore
    "h2>=4.3.0,<5",            # via httpx[http2]
    "urllib3>=2.6.3,<3",
    "requests>=2.32.5,<3",
    "aiohttp>=3.13.3,<4",
]

[project.optional-dependencies]
dev = [
    "behave>=1.2.6,<2",
    "coverage>=7.6.12,<8",
    "mypy>=1.16.0,<2",
    "mypy-extensions>=1.1.0,<2",
    "ruff==0.14.14",
    "types-six>=1.17.0.20250515",
]

[project.urls]
Homepage = "https://aptos.dev/en/build/sdks/python-sdk"
Repository = "https://github.com/aptos-labs/aptos-python-sdk"

[tool.coverage.run]
source = ["aptos_sdk"]
omit = [
    "aptos_sdk/**/test_*.py",
    "aptos_sdk/**/*_test.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "class Test\\(",
    "def test_",
    "raise NotImplementedError",
]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # line length enforced by ruff format

[tool.ruff.lint.per-file-ignores]
"features/stubs/**/*.pyi" = ["F403", "F405", "F822"]  # behave type stubs use star re-exports

[tool.ruff.lint.isort]
known-first-party = ["aptos_sdk"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
