[project]
name = "aptos-sdk-v2"
version = "0.1.0"
description = "Aptos Python SDK v2 — async-first client for the Aptos blockchain"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    { name = "Aptos Labs", email = "opensource@aptoslabs.com" },
]
keywords = ["aptos", "blockchain", "web3", "sdk", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "aiohttp>=3.9,<4",
    "PyNaCl>=1.5,<2",
    "coincurve>=20,<21",
    "bip-utils>=2.9,<3",
]

[project.urls]
Homepage = "https://github.com/aptos-labs/aptos-python-sdk"
Documentation = "https://aptos.dev/sdks/python-sdk"
Repository = "https://github.com/aptos-labs/aptos-python-sdk"
Issues = "https://github.com/aptos-labs/aptos-python-sdk/issues"
Changelog = "https://github.com/aptos-labs/aptos-python-sdk/releases"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "aioresponses>=0.7",
    "mypy>=1.11",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aptos_sdk_v2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = false
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "bip_utils.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "coincurve.*"
ignore_missing_imports = true
